# rag_app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/cdk-deploy/: SKILL.md
.claude/skills/ci-check/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: backend.yml  cleanup-ecs.yml  deploy-backend.yml  deploy-frontend.yml  deploy-infra.yml  frontend.yml
cdk/: .gitignore  package-lock.json  package.json  tsconfig.json
cdk/lib/: ecs-stack.ts  efs-stack.ts  iam-stack.ts  rds-stack.ts  s3-stack.ts  vpc-stack.ts
cdk/scripts/: check-resources.sh  delete-resources.sh
docs/adr/: 001-compute-architecture.md
src/: init.sql
src/backend/: Dockerfile  config.py  init_db.py  main.py  pyproject.toml
src/backend/.devcontainer/: devcontainer.json  docker-compose.extend.yml
src/backend/api/endpoints/: api.py  chats.py  deps.py  documents.py  system.py
src/backend/core/: chroma.py  logger.py
src/backend/schemas/: documents.py
src/backend/services/rag/: CLAUDE.md  chains.py  nodes.py  prompts.py  repository.py  schemas.py  utils.py  workflows.py
src/backend/tests/: conftest.py  test_chats.py  test_documents.py
src/frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
src/frontend/.devcontainer/: devcontainer.json
src/frontend/app/: layout.tsx  page.tsx
src/frontend/components/: FileList.tsx  UploadForm.tsx
src/frontend/lib/: auth.ts  chat.ts  chatFilter.ts  db.ts  env.ts  file.ts  logger.ts
src/frontend/types/: auth.ts  chatHistory.ts  file.ts  (+1 more)
(+17 files in other folders)
