[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "ruff (>=0.15.14,<0.16.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "langchain-cohere (>=0.5.1,<0.6.0)",
    "langgraph (>=1.2.2,<2.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pymysql (>=1.2.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
